--- a/css/index.css
+++ b/css/index.css
@@ -60,13 +60,15 @@ table {
 
 th {
     background-color: green;
+    padding: 0px 20px 0px 20px;
     color: white;
-    min-width: 200px;
+    max-width: 200px;
 }
 
 td {
     background-color: rgb(255, 229, 192, 0.7);
-    min-width: 200px;
+    padding: 0px 20px 0px 20px;
+    max-width: 200px;
 }
 
 #gs-limit-exceeded, #g-limit-exceeded, #s-limit-exceeded {
